--- a/package.json
+++ b/package.json
@@ -12,13 +12,13 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^13.0.2",
-    "@angular/cdk": "^13.0.2",
+    "@angular/cdk": "^13.3.9",
     "@angular/common": "^13.0.2",
     "@angular/compiler": "^13.0.2",
     "@angular/core": "^13.0.2",
     "@angular/flex-layout": "12.0.0-beta.35",
     "@angular/forms": "^13.0.2",
-    "@angular/material": "^13.0.2",
+    "@angular/material": "^13.3.9",
     "@angular/platform-browser": "^13.0.2",
     "@angular/platform-browser-dynamic": "^13.0.2",
     "@angular/router": "^13.0.2",
@@ -35,7 +35,7 @@
     "apexcharts": "~3.25.0",
     "date-fns": "~2.19.0",
     "highlight.js": "~10.6.0",
-    "luxon": "~1.26.0",
+    "luxon": "^1.28.1",
     "ngx-quicklink": "~0.2.7",
     "ngx-quill": "~16.0.1",
     "ngx-showdown": "~6.0.0",
@@ -48,8 +48,8 @@
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^13.0.3",
-    "@angular/cli": "^13.0.3",
+    "@angular-devkit/build-angular": "^13.3.11",
+    "@angular/cli": "^13.3.11",
     "@angular/compiler-cli": "^13.0.2",
     "@angular/language-service": "^13.0.2",
     "@types/faker": "^5.5.6",
@@ -69,7 +69,7 @@
     "karma-jasmine-html-reporter": "~1.5.0",
     "postcss": "~8.3.5",
     "postcss-scss": "~3.0.5",
-    "protractor": "~7.0.0",
+    "protractor": "^3.3.0",
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
     "typescript": "~4.4.4"
