--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
     "lint": "ng lint",
     "e2e": "ng e2e"
   },
+  "engines": {
+    "node": "16.20.1",
+    "npm": "9.8.1"
+  },
   "private": true,
   "dependencies": {
     "@angular/animations": "^15.2.9",
