--- a/package.json
+++ b/package.json
@@ -73,9 +73,9 @@
     "karma-jasmine-html-reporter": "~1.5.0",
     "postcss": "~8.3.5",
     "postcss-scss": "~3.0.5",
-    "protractor": "^3.3.0",
+    "protractor": "^7.0.0",
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
-    "typescript": "~4.9.5"
+    "typescript": "^2.9.2"
   }
 }
