--- a/package.json
+++ b/package.json
@@ -16,11 +16,11 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^15.2.9",
-    "@angular/cdk": "^14.2.7",
-    "@angular/common": "^15.2.9",
+    "@angular/cdk": "^12.2.13",
+    "@angular/common": "^12.2.17",
     "@angular/compiler": "^13.0.0",
-    "@angular/core": "^15.2.9",
-    "@angular/flex-layout": "12.0.0-beta.35",
+    "@angular/core": "^12.2.17",
+    "@angular/flex-layout": "^15.0.0-beta.42",
     "@angular/forms": "^15.2.9",
     "@angular/material": "^13.3.9",
     "@angular/platform-browser": "^15.2.9",
@@ -76,6 +76,6 @@
     "protractor": "^7.0.0",
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
-    "typescript": "^2.9.2"
+    "typescript": "^4.4.3"
   }
 }
