--- a/package.json
+++ b/package.json
@@ -15,55 +15,56 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^15.2.9",
-    "@angular/cdk": "^14.2.7",
-    "@angular/common": "^15.2.9",
-    "@angular/compiler": "^15.2.9",
-    "@angular/core": "^15.2.9",
-    "@angular/flex-layout": "12.0.0-beta.35",
-    "@angular/forms": "^15.2.9",
+    "@angular/animations": "^13.0.0",
+    "@angular/cdk": "^12.0.0",
+    "@angular/common": "^13.0.0",
+    "@angular/compiler": "^13.4.0",
+    "@angular/core": "^13.0.0",
+    "@angular/flex-layout": "^12.0.0-beta.35",
+    "@angular/forms": "^13.0.0",
     "@angular/material": "^13.3.9",
-    "@angular/platform-browser": "^15.2.9",
-    "@angular/platform-browser-dynamic": "^15.2.9",
-    "@angular/router": "^15.2.9",
+    "@angular/platform-browser": "^13.0.0",
+    "@angular/platform-browser-dynamic": "^13.0.0",
+    "@angular/router": "^13.0.0",
     "@iconify/icons-emojione": "~1.1.0",
     "@iconify/icons-fa-brands": "~1.1.0",
-    "@iconify/icons-fa-solid": "^1.1.1",
-    "@iconify/icons-ic": "^1.1.6",
-    "@iconify/icons-logos": "^1.1.10",
+    "@iconify/icons-fa-solid": "^1.2.4",
+    "@iconify/icons-ic": "^1.2.13",
+    "@iconify/icons-logos": "^1.2.33",
     "@ngneat/until-destroy": "~9.0.0",
     "@ngx-loading-bar/core": "^5.1.2",
     "@ngx-loading-bar/router": "^5.1.2",
     "@visurel/iconify-angular": "~11.0.0",
-    "angular-calendar": "~0.29.0-beta.10",
+    "angular-calendar": "^0.29.0",
     "apexcharts": "~3.25.0",
     "date-fns": "~2.19.0",
     "highlight.js": "~10.6.0",
     "luxon": "^1.28.1",
-    "ngx-quicklink": "~0.2.7",
+    "ngx-quicklink": "^0.2.7",
     "ngx-quill": "~16.0.1",
     "ngx-showdown": "~6.0.0",
+    "postcss-load-config": "^4.0.1",
     "quill": "~1.3.7",
-    "rxjs": "^6.6.7",
+    "rxjs": "^6.5.3",
     "showdown": "~1.9.1",
     "simplebar": "~5.3.6",
-    "tailwindcss": "^2.2.19",
-    "tslib": "^2.3.0",
-    "zone.js": "~0.11.4"
+    "tailwindcss": "^3.3.3",
+    "tslib": "^2.6.1",
+    "zone.js": "^0.11.8"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^13.3.11",
     "@angular/cli": "^13.3.11",
-    "@angular/compiler-cli": "^15.2.9",
-    "@angular/language-service": "^15.2.9",
-    "@types/faker": "^5.5.6",
-    "@types/jasmine": "^3.6.11",
-    "@types/jasminewd2": "^2.0.9",
-    "@types/luxon": "^1.25.3",
-    "@types/node": "^14.14.45",
+    "@angular/compiler-cli": "^13.4.0",
+    "@angular/language-service": "^13.0.0",
+    "@types/faker": "^5.5.9",
+    "@types/jasmine": "^3.10.11",
+    "@types/jasminewd2": "^2.0.10",
+    "@types/luxon": "^1.27.1",
+    "@types/node": "^14.18.54",
     "@types/showdown": "~1.9.4",
     "@types/simplebar": "~5.3.3",
-    "autoprefixer": "^10.4.0",
+    "autoprefixer": "^10.4.14",
     "faker": "~5.4.0",
     "jasmine-core": "~3.6.0",
     "jasmine-spec-reporter": "~5.0.0",
@@ -73,9 +74,9 @@
     "karma-jasmine-html-reporter": "~1.5.0",
     "postcss": "~8.3.5",
     "postcss-scss": "~3.0.5",
-    "protractor": "^3.3.0",
-    "ts-node": "~8.3.0",
+    "protractor": "^7.0.0",
+    "ts-node": "^9.1.1",
     "tslint": "~6.1.0",
-    "typescript": "~4.9.5"
+    "typescript": "^4.4.4"
   }
 }
