--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "13.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "node server.js",
+    "start": "node app.js",
     "build": "NODE_ENV=production node --max_old_space_size=6144 ./node_modules/@angular/cli/bin/ng build --configuration production",
     "test": "ng test",
     "lint": "ng lint",
