--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "scripts": {
     "ng": "ng",
     "start": "node app.js",
-    "build": "NODE_ENV=production node --max_old_space_size=6144 ./node_modules/@angular/cli/bin/ng build --configuration production",
+    "build": "ng build",
+    "build:dev": "ng build --configuration development",
+    "build:hom": "ng build --configuration homolog",
+    "build:prod": "ng build --configuration production",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e"
