--- a/package.json
+++ b/package.json
@@ -5,9 +5,7 @@
     "ng": "ng",
     "start": "node app.js",
     "build": "ng build",
-    "build:dev": "ng build --configuration development",
-    "build:hom": "ng build --configuration homolog",
-    "build:prod": "ng build --configuration production",
+    "heroku-postbuild": "ng build --aot --configuration=${ENV}",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e"
