--- a/package.json
+++ b/package.json
@@ -56,6 +56,11 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^13.0.3",
+    "@angular-eslint/builder": "13.5.0",
+    "@angular-eslint/eslint-plugin": "13.5.0",
+    "@angular-eslint/eslint-plugin-template": "13.5.0",
+    "@angular-eslint/schematics": "13.5.0",
+    "@angular-eslint/template-parser": "13.5.0",
     "@angular/cli": "^13.0.3",
     "@angular/compiler-cli": "^13.0.2",
     "@angular/language-service": "^13.0.2",
@@ -66,7 +71,10 @@
     "@types/node": "^14.14.45",
     "@types/showdown": "~1.9.4",
     "@types/simplebar": "~5.3.3",
+    "@typescript-eslint/eslint-plugin": "5.27.1",
+    "@typescript-eslint/parser": "5.27.1",
     "autoprefixer": "^10.4.0",
+    "eslint": "^8.17.0",
     "faker": "~5.4.0",
     "jasmine-core": "~3.6.0",
     "jasmine-spec-reporter": "~5.0.0",
