--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -7,6 +7,7 @@ on:
       - homolog
       - develop
       - sonar
+      - feature*
   pull_request:
       types: [opened, synchronize, reopened]
 name: Main Workflow
