--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -7,7 +7,8 @@ on:
       - homolog
       - develop
       - sonar
-      - feature*
+      - feature/*
+
   pull_request:
       types: [opened, synchronize, reopened]
 name: Main Workflow
