--- a/.github/workflows/development.yml
+++ b/.github/workflows/development.yml
@@ -3,11 +3,7 @@ on:
   # a pull request.
   push:
     branches:
-      - master
-      - homolog
       - develop
-      - sonar
-      - feature/*
 
   pull_request:
     types: [opened, synchronize, reopened]
@@ -51,3 +47,14 @@ jobs:
         uses: wearerequired/lint-action@v2
         with:
           prettier: true
+          
+  pull-request:
+    runs-on: ubuntu-latest
+    needs: [ lint,sonar ]
+    steps:
+    - uses: actions/checkout@v3
+    - name: pull-request
+    uses: actions/auto-pull-request@v1.0.1
+      with:
+        destination_branch: "homolog"
+        pr_title: "AUTOMATIC-MERGE-${{ github.ref_name }}-HOMOLOG"
