--- a/.github/workflows/2-development.yml
+++ b/.github/workflows/2-development.yml
@@ -1,3 +1,4 @@
+name: "2 - [DEV] clean code and PR"
 on:
   # Trigger analysis when pushing in master or pull requests, and when creating
   # a pull request.
@@ -6,7 +7,6 @@ on:
     types: closed
     branches: develop
     
-  name: Main Workflow
   jobs:
     sonar:
       runs-on: ubuntu-latest
