--- a/.github/workflows/development.yml
+++ b/.github/workflows/development.yml
@@ -1,9 +1,9 @@
-name: "1 - [FEAT] clean code"
+name: "2 - [DEV] clean code and PR"
 on:
-  push:
-    branches:
-      - feature/*
-
+  pull_request:
+    types: closed
+    branches: develop
+    
 jobs:
   sonar:
     runs-on: ubuntu-latest
@@ -20,7 +20,7 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.EASY_TOKEN }}
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-
+          
   lint:
     name: Run linters
     runs-on: ubuntu-latest
@@ -42,3 +42,14 @@ jobs:
         uses: wearerequired/lint-action@v2
         with:
           prettier: true
+          
+  pull-request:
+    runs-on: ubuntu-latest
+    needs: [ lint,sonar ]
+    steps:
+    - uses: actions/checkout@v3
+    - name: pull-request
+    uses: actions/auto-pull-request@v1.0.1
+      with:
+        destination_branch: "homolog"
+        pr_title: "AUTOMATIC-MERGE-${{ github.ref_name }}-HOMOLOG"
