--- a/.github/workflows/development.yml
+++ b/.github/workflows/development.yml
@@ -1,55 +1,18 @@
 name: "2 - [DEV] clean code and PR"
 on:
   pull_request:
-    types: closed
-    branches: develop
-    
+    types: [closed]
+    branches: [develop]
+# on:
+#   push:
+#     branches:
+#     - feature/*
+
+
 jobs:
-  sonar:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v3
-        with:
-          fetch-depth: 0
-      - name: SonarCloud Scan
-        uses: sonarsource/sonarcloud-github-action@master
-        with:
-          args: >
-            -Dsonar.organization=ondlinesolutions
-            -Dsonar.projectKey=OndlineSolutions_easycut-web
-        env:
-          GITHUB_TOKEN: ${{ secrets.EASY_TOKEN }}
-          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-          
-  lint:
-    name: Run linters
-    runs-on: ubuntu-latest
-
-    steps:
-      - name: Check out Git repository
-        uses: actions/checkout@v2
-
-      - name: Set up Node.js
-        uses: actions/setup-node@v1
-        with:
-          node-version: 16
-
-      # ESLint and Prettier must be in `package.json`
-      - name: Install Node.js dependencies
-        run: npm ci
-
-      - name: Run linters
-        uses: wearerequired/lint-action@v2
-        with:
-          prettier: true
-          
   pull-request:
     runs-on: ubuntu-latest
-    needs: [ lint,sonar ]
     steps:
     - uses: actions/checkout@v3
-    - name: pull-request
-    uses: actions/auto-pull-request@v1.0.1
-      with:
-        destination_branch: "homolog"
-        pr_title: "AUTOMATIC-MERGE-${{ github.ref_name }}-HOMOLOG"
+    - name: Create Pull Request
+      uses: actions/create-pull-request@v5
