--- a/.github/workflows/development.yml
+++ b/.github/workflows/development.yml
@@ -10,9 +10,12 @@ on:
 
 
 jobs:
-  pull-request:
+  automerge:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v3
-    - name: Create Pull Request
-      uses: actions/create-pull-request@v5
+    - uses: OndlineSolutions/enable-pull-request-automerge@v3
+      with:
+        token: ${{ secrets.EASY_TOKEN }}
+        pull-request-number: ${{ github.event.pull_request.number }}
+        pr_title: "AUTOMATIC-MERGE-${{ github.ref_name }}-HOMOLOG"
+        merge-method: squash
