rollback sonar to PR

--- a/.github/workflows/1-feature-integration.yml
+++ b/.github/workflows/1-feature-integration.yml
@@ -8,6 +8,9 @@ on:
     - sonar
     - feature/*
 
+  pull_request:
+    types: [opened, synchronize, reopened]
+
 jobs:
   sonar:
     runs-on: ubuntu-latest
