--- a/.github/workflows/2-development.yml
+++ b/.github/workflows/2-development.yml
@@ -2,7 +2,7 @@ name: "2 - [DEV] clean code and PR"
 on:
   pull_request:
     types: [closed]
-    branches: [develop]
+    branches: [aws/develop]
 # on:
 #   push:
 #     branches:
@@ -17,6 +17,6 @@ jobs:
     - name: pull-request
     uses: diillson/auto-pull-request@v1.0.1
       with:
-        destination_branch: "homolog"
+        destination_branch: homolog
         pr_title: "AUTOMATIC-MERGE-${{ github.ref_name }}-HOMOLOG"
         merge-method: squash
