--- a/.github/workflows/2-development.yml
+++ b/.github/workflows/2-development.yml
@@ -15,7 +15,7 @@ jobs:
     steps:
     - uses: actions/checkout@v3
     - name: pull-request
-    uses: diillson/auto-pull-request@v1.0.1
+    uses: OndlineSolutions/easycut-web
       with:
         destination_branch: homolog
         pr_title: "AUTOMATIC-MERGE-${{ github.ref_name }}-HOMOLOG"
