remove another branches from execution sonar in closed PR

--- a/.github/workflows/1-feature-integration.yml
+++ b/.github/workflows/1-feature-integration.yml
@@ -9,6 +9,11 @@ on:
 
   pull_request:
     types: [opened, synchronize, reopened]
+    branches:
+    - master
+    - homolog
+    - develop
+    - feature/*
 
 jobs:
   sonar:
