Revert "test execute only closed"
This reverts commit 55a94d1911f2da3f2176a4084c8f0d2e432b4f10.

--- a/.github/workflows/2-development.yml
+++ b/.github/workflows/2-development.yml
@@ -1,8 +1,8 @@
 name: "2 - [DEV] clean code and PR"
 on:
   pull_request:
-    types: - closed
-    branches: - awsdevelop
+    types: [closed]
+    branches: [awsdevelop]
 # on:
 #   push:
 #     branches:
