--- a/.github/workflows/2-development.yml
+++ b/.github/workflows/2-development.yml
@@ -2,7 +2,7 @@ name: "2 - [DEV] clean code and PR"
 on:
   pull_request:
     types: [closed]
-    branches: [awsdevelop]
+    branches: - awsdevelop
 # on:
 #   push:
 #     branches:
@@ -16,7 +16,7 @@ jobs:
     - uses: actions/checkout@v3
     - name: pull-request
     uses: OndlineSolutions/easycut-web
-      with:
-        destination_branch: homolog
-        pr_title: "AUTOMATIC-MERGE-${{ github.ref_name }}-HOMOLOG"
-        merge-method: squash
+    with:
+      destination_branch: homolog
+      pr_title: "AUTOMATIC-MERGE-${{ github.ref_name }}-HOMOLOG"
+      merge-method: squash
