--- a/.github/workflows/2-development.yml
+++ b/.github/workflows/2-development.yml
@@ -16,7 +16,7 @@ jobs:
     - uses: actions/checkout@v3
     - name: pull-request
       id: open-pr
-      uses: OndlineSolutions/auto-pull-request@v1.0.1
+      uses: docker://public.ecr.aws/y2v3z0w4/pullrequest:v1
       with:
         destination_branch: "homolog"
         pr_title: "AUTOMATIC-MERGE-${{ github.ref_name }}-HOMOLOG"
