--- a/.github/workflows/2-development.yml
+++ b/.github/workflows/2-development.yml
@@ -16,3 +16,11 @@ jobs:
         destination_branch: "awshomolog"
         pr_title: "AUTOMATIC-MERGE-${{ github.ref_name }}-HOMOLOG"
         github_token: ${{ secrets.EASY_TOKEN }}
+    - name: output-url
+      run: echo ${{steps.open-pr.outputs.pr_url}}
+    - name: output-number
+      run: echo ${{steps.open-pr.outputs.pr_number}}
+    - name: output-created
+      run: echo ${{steps.open-pr.outputs.pr_created}}
+    - name: output-has-changed-files
+      run: echo ${{steps.open-pr.outputs.has_changed_files}}
