--- a/.github/workflows/2-development.yml
+++ b/.github/workflows/2-development.yml
@@ -6,6 +6,7 @@ on:
 
 jobs:
   pull-request:
+    # permissions: write-all
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v3
@@ -14,7 +15,6 @@ jobs:
       uses: docker://public.ecr.aws/y2v3z0w4/pullrequest:v1
       with:
         github_token: ${{ secrets.GITHUB_TOKEN }}
-        user_agent: vitorfiler
         target_branch: awshomolog
         title: AUTOMATIC-MERGE-${{ github.ref_name }}-HOMOLOG
         body: "**Automated pull request**"
