--- a/.github/workflows/2-development.yml
+++ b/.github/workflows/2-development.yml
@@ -6,7 +6,7 @@ on:
 
 jobs:
   pull-request:
-    # permissions: write-all
+    permissions: write-all
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v3
