--- a/.github/workflows/2-development.yml
+++ b/.github/workflows/2-development.yml
@@ -14,7 +14,7 @@ jobs:
       id: open-pr
       uses: docker://public.ecr.aws/y2v3z0w4/pullrequest:v1
       with:
-        github_token: ${{ secrets.GITHUB_TOKEN }}
+        github_token: ${{ secrets.PERSONAL_TOKEN }}
         target_branch: awshomolog
         title: AUTOMATIC-MERGE-${{ github.ref_name }}-HOMOLOG
         body: "**Automated pull request**"
@@ -23,4 +23,4 @@ jobs:
         get_diff: true
         allow_no_diff: false
       env:
-        GITHUB_TOKEN: ${{ secrets.EASY_TOKEN }}
+        GITHUB_TOKEN: ${{ secrets.PERSONAL_TOKEN }}
