--- a/.github/workflows/2-development.yml
+++ b/.github/workflows/2-development.yml
@@ -1,26 +1,44 @@
-name: "2 - [DEV] clean code and PR"
+name: "2 - [DEV] Varredura develop"
 on:
   pull_request:
-    types: [closed]
-    branches: [awsdevelop]
+    types: [opened, synchronize, reopened]
+    branches:
+      - develop
 
 jobs:
-  pull-request:
-    permissions: write-all
+  sonar:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-      - name: pull-request
-        id: open-pr
-        uses: docker://public.ecr.aws/y2v3z0w4/pullrequest:v1
         with:
-          github_token: ${{ secrets.PERSONAL_TOKEN }}
-          destination_branch: "homolog"
-          pr_title: "AUTOMATIC-MERGE-${{ github.ref_name }}-HOMOLOG"
-          body: "**Automated pull request**"
-          reviewer: vitorfiler
-          assignee: vitorfiler
-          get_diff: true
-          allow_no_diff: false
+          fetch-depth: 0
+      - name: SonarCloud Scan
+        uses: sonarsource/sonarcloud-github-action@master
+        with:
+          args: >
+            -Dsonar.organization=ondlinesolutions -Dsonar.projectKey=OndlineSolutions_easycut-web
         env:
-          GITHUB_TOKEN: ${{ secrets.PERSONAL_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.EASY_TOKEN }}
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+
+  formatacao:
+    name: Run linters
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Check out Git repository
+        uses: actions/checkout@v2
+
+      - name: Set up Node.js
+        uses: actions/setup-node@v1
+        with:
+          node-version: 16
+
+      # ESLint and Prettier must be in `package.json`
+      - name: Install Node.js dependencies
+        run: npm ci
+
+      - name: Run linters
+        uses: wearerequired/lint-action@v2
+        with:
+          prettier: true
