--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,1 +1,6 @@
-{}
+{
+  "sonarlint.connectedMode.project": {
+    "connectionId": "ondlinesolutions",
+    "projectKey": "OndlineSolutions_easycut-web"
+  }
+}
