--- a/.github/workflows/1-feature-integration.yml
+++ b/.github/workflows/1-feature-integration.yml
@@ -55,9 +55,9 @@ jobs:
           destination_branch: "develop"
           pr_title: "AUTOMATIC-MERGE-${{ github.ref_name }}-DEVELOP"
           body: "**Automated pull request**"
-          reviewer: vitorfiler
-          assignee: vitorfiler
-          label: automatic
+          pr_reviewer: vitorfiler
+          pr_assignee: vitorfiler
+          pr_label: automatic
           get_diff: true
           allow_no_diff: false
         env:
