--- a/.github/workflows/4-homolog.yml
+++ b/.github/workflows/4-homolog.yml
@@ -1,4 +1,4 @@
-name: "4 - [DEV] Varredura homolog"
+name: "4 - [HOM] Varredura homolog"
 on:
   pull_request:
     types: [opened, synchronize, reopened]
