--- a/.github/workflows/5-pull-request-to-master.yml
+++ b/.github/workflows/5-pull-request-to-master.yml
@@ -17,7 +17,7 @@ jobs:
         with:
           github_token: ${{ secrets.PERSONAL_TOKEN }}
           destination_branch: "master"
-          pr_title: "AUTOMATIC-MERGE-${{ github.ref_name }}-HOMOLOG"
+          pr_title: "AUTOMATIC-MERGE-${{ github.ref_name }}-MASTER"
           body: "**Automated pull request**"
           reviewer: vitorfiler
           assignee: vitorfiler
