--- a/.github/workflows/5-pull-request-to-master.yml
+++ b/.github/workflows/5-pull-request-to-master.yml
@@ -19,8 +19,9 @@ jobs:
           destination_branch: "master"
           pr_title: "AUTOMATIC-MERGE-${{ github.ref_name }}-MASTER"
           body: "**Automated pull request**"
-          reviewer: vitorfiler
-          assignee: vitorfiler
+          pr_reviewer: vitorfiler
+          pr_assignee: vitorfiler
+          pr_label: automatic
           get_diff: true
           allow_no_diff: false
         env:
