--- a/.github/workflows/1-feature-integration.yml
+++ b/.github/workflows/1-feature-integration.yml
@@ -54,7 +54,7 @@ jobs:
               with:
                   github_token: ${{ secrets.PERSONAL_TOKEN }}
                   destination_branch: 'develop'
-                  pr_title: 'Auto Merge Requeste into DEVELOP from ${{ github.ref_name }}'
+                  pr_title: 'Auto Merge Request into DEVELOP from ${{ github.ref_name }}'
                   body: '**Automated pull request**'
                   pr_label: automatic
                   get_diff: true
