--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -2,8 +2,5 @@
     "trailingComma": "none",
     "tabWidth": 4,
     "semi": true,
-    "singleQuote": true,
-    "editor.formatOnSave": true,
-    "editor.formatOnPaste": false,  
-    "prettier.useEditorConfig": false
+    "singleQuote": true
 }
