--- a/.github/workflows/1-feature-integration.yml
+++ b/.github/workflows/1-feature-integration.yml
@@ -27,15 +27,18 @@ jobs:
             - name: Check out Git repository
               uses: actions/checkout@v2
 
+              continue-on-error: false
             - name: Set up Node.js
               uses: actions/setup-node@v1
               with:
-                  node-version: 16
+                  node-version: 12
 
             # ESLint and Prettier must be in `package.json`
+              continue-on-error: false
             - name: Install Node.js dependencies
               run: npm ci
-
+              
+              continue-on-error: false
             - name: Run linters
               uses: wearerequired/lint-action@v2
               with:
