--- a/.github/workflows/1-feature-integration.yml
+++ b/.github/workflows/1-feature-integration.yml
@@ -10,6 +10,7 @@ jobs:
             - uses: actions/checkout@v3
               with:
                   fetch-depth: 0
+                  persist-credentials: false
             - name: SonarCloud Scan
               uses: sonarsource/sonarcloud-github-action@master
               with:
@@ -19,28 +20,25 @@ jobs:
                   GITHUB_TOKEN: ${{ secrets.EASY_TOKEN }}
                   SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
 
-    formatacao:
-        name: Run linters
-        runs-on: ubuntu-latest
+    prettier:
+    runs-on: ubuntu-latest
 
-        steps:
-            - name: Check out Git repository
-              uses: actions/checkout@v2
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v3
+        with:
+          fetch-depth: 0
+          ref: ${{ github.head_ref }}
+          # Make sure the value of GITHUB_TOKEN will not be persisted in repo's config
+          persist-credentials: false
 
-              continue-on-error: false
-            - name: Set up Node.js
-              uses: actions/setup-node@v1
-              with:
-                  node-version: 16
-
-            # ESLint and Prettier must be in `package.json`
-              continue-on-error: false
-            - name: Install Node.js dependencies
-              run: npm ci
-              
-              continue-on-error: false
-            - name: Run linters
-              uses: wearerequired/lint-action@v2
+      - name: Prettify code
+        uses: creyD/prettier_action@v4.3
+        with:
+          prettier_options: --write 
+          only_changed: True
+          # Set your custom token
+          github_token: ${{ secrets.PERSONAL_GITHUB_TOKEN }}
 
     pull-request:
         permissions: write-all
@@ -60,5 +58,6 @@ jobs:
                   pr_label: automatic
                   get_diff: true
                   allow_no_diff: false
+                  persist-credentials: false
               env:
                   GITHUB_TOKEN: ${{ secrets.PERSONAL_TOKEN }}
