--- a/.github/workflows/1-feature-integration.yml
+++ b/.github/workflows/1-feature-integration.yml
@@ -20,24 +20,22 @@ jobs:
                   GITHUB_TOKEN: ${{ secrets.EASY_TOKEN }}
                   SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
 
-    prettier:
+    format:
         runs-on: ubuntu-latest
         steps:
-            - name: Checkout
-            uses: actions/checkout@v3
+        - uses: actions/checkout@v2
             with:
-                fetch-depth: 0
-                ref: ${{ github.head_ref }}
-                # Make sure the value of GITHUB_TOKEN will not be persisted in repo's config
-                persist-credentials: false
-
-            - name: Prettify code
-            uses: creyD/prettier_action@v4.3
+            ref: ${{ github.head_ref }}
+        - uses: actions/setup-node@v2
             with:
-                prettier_options: --write
-                only_changed: True
-                # Set your custom token
-                github_token: ${{ secrets.PERSONAL_GITHUB_TOKEN }}
+            node-version: "14.x"
+        - run: npm ci
+        - run: npm run format
+        - name: Commit changes
+            uses: stefanzweifel/git-auto-commit-action@v4
+            with:
+            commit_message: Apply formatting changes
+            branch: ${{ github.head_ref }}
 
     pull-request:
         permissions: write-all
