--- a/.github/workflows/1-feature-integration.yml
+++ b/.github/workflows/1-feature-integration.yml
@@ -10,7 +10,6 @@ jobs:
             - uses: actions/checkout@v3
               with:
                   fetch-depth: 0
-                  persist-credentials: false
             - name: SonarCloud Scan
               uses: sonarsource/sonarcloud-github-action@master
               with:
@@ -20,22 +19,31 @@ jobs:
                   GITHUB_TOKEN: ${{ secrets.EASY_TOKEN }}
                   SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
 
-    format:
+    formatacao:
+        name: Run linters
         runs-on: ubuntu-latest
+
         steps:
-        - uses: actions/checkout@v2
-            with:
-            ref: ${{ github.head_ref }}
-        - uses: actions/setup-node@v2
-            with:
-            node-version: "14.x"
-        - run: npm ci
-        - run: npm run format
-        - name: Commit changes
-            uses: stefanzweifel/git-auto-commit-action@v4
-            with:
-            commit_message: Apply formatting changes
-            branch: ${{ github.head_ref }}
+            - name: Check out Git repository
+              uses: actions/checkout@v2
+
+              continue-on-error: false
+            - name: Set up Node.js
+              uses: actions/setup-node@v1
+              with:
+                  node-version: 16
+
+            # ESLint and Prettier must be in `package.json`
+              continue-on-error: false
+            - name: Install Node.js dependencies
+              run: npm ci
+              
+              continue-on-error: false
+            - name: Run linters
+              uses: wearerequired/lint-action@v2
+              with:
+                  prettier: true
+                  prettier_options: --write
 
     pull-request:
         permissions: write-all
@@ -55,6 +63,5 @@ jobs:
                   pr_label: automatic
                   get_diff: true
                   allow_no_diff: false
-                  persist-credentials: false
               env:
                   GITHUB_TOKEN: ${{ secrets.PERSONAL_TOKEN }}
