--- a/.github/workflows/1-feature-integration.yml
+++ b/.github/workflows/1-feature-integration.yml
@@ -44,6 +44,7 @@ jobs:
               with:
                   prettier: true
                   prettier_options: --write
+                  github_token: ${{ secrets.PERSONAL_TOKEN }}
 
     pull-request:
         permissions: write-all
