--- a/.github/workflows/1-feature-integration.yml
+++ b/.github/workflows/1-feature-integration.yml
@@ -36,7 +36,7 @@ jobs:
               # ESLint and Prettier must be in `package.json`
               continue-on-error: false
             - name: Install Node.js dependencies
-            - run: npm ci
+              run: npm ci
             - run: npm run format
               continue-on-error: false
             - name: Run linters
