--- a/.github/workflows/1-feature-integration.yml
+++ b/.github/workflows/1-feature-integration.yml
@@ -39,7 +39,7 @@ jobs:
               run: npm ci
             - run: npm run format
               continue-on-error: false
-            - name: Run linters
+            - name: formatacao
               uses: wearerequired/lint-action@v2
               with:
                   prettier: true
