--- a/.github/workflows/1-feature-integration.yml
+++ b/.github/workflows/1-feature-integration.yml
@@ -20,7 +20,6 @@ jobs:
                   SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
 
     formatacao:
-        name: Run linters
         runs-on: ubuntu-latest
 
         steps:
@@ -38,6 +37,12 @@ jobs:
             - name: Install Node.js dependencies
               run: npm ci
             - run: npm run format
+            - name: Commit changes
+              uses: stefanzweifel/git-auto-commit-action@v4
+              with:
+                commit_message: Apply formatting changes
+                branch: ${{ github.head_ref }}
+                
               continue-on-error: false
             - name: formatacao
               uses: wearerequired/lint-action@v2
