--- a/.github/workflows/1-feature-integration.yml
+++ b/.github/workflows/1-feature-integration.yml
@@ -26,25 +26,16 @@ jobs:
             - name: Check out Git repository
               uses: actions/checkout@v2
 
-              continue-on-error: false
             - name: Set up Node.js
               uses: actions/setup-node@v1
               with:
                   node-version: 16
 
-              # ESLint and Prettier must be in `package.json`
-              continue-on-error: false
+            # ESLint and Prettier must be in `package.json`
             - name: Install Node.js dependencies
               run: npm ci
-            - run: npm run format
-            - name: Commit changes
-              uses: stefanzweifel/git-auto-commit-action@v4
-              with:
-                commit_message: Apply formatting changes
-                branch: ${{ github.head_ref }}
-                
-              continue-on-error: false
-            - name: formatacao
+
+            - name: Run linters
               uses: wearerequired/lint-action@v2
               with:
                   prettier: true
