--- a/angular.json
+++ b/angular.json
@@ -121,7 +121,8 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "vex:build"
+            "browserTarget": "vex:build",
+            "disableHostCheck": true
           },
           "configurations": {
             "production": {
