--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
         "test": "ng test",
         "lint": "ng lint",
         "format": "npx prettier . --write",
+        "start-local": "ng serve --no-live-reload -o",
         "e2e": "ng e2e"
     },
     "engines": {
