--- a/.github/workflows/1-feature-integration.yml
+++ b/.github/workflows/1-feature-integration.yml
@@ -1,4 +1,4 @@
-name: "1 - [FEAT] Varredura de Features"
+name: '1 - [FEAT] Varredura de Features'
 on:
     push:
         branches:
@@ -31,9 +31,9 @@ jobs:
               uses: docker://public.ecr.aws/y2v3z0w4/pullrequest:v1
               with:
                   github_token: ${{ secrets.PERSONAL_TOKEN }}
-                  destination_branch: "develop"
-                  pr_title: "Auto Merge Request into DEVELOP from ${{ github.ref_name }}"
-                  body: "**Automated pull request**"
+                  destination_branch: 'develop'
+                  pr_title: 'Auto Merge Request into DEVELOP from ${{ github.ref_name }}'
+                  body: '**Automated pull request**'
                   pr_label: automatic
                   pr_assignee: ${{ github.actor }}
                   get_diff: true
