ajustes de layouts gerais das telas e inclusão de interceptor

--- a/angular.json
+++ b/angular.json
@@ -35,10 +35,12 @@
                             "src/.htaccess"
                         ],
                         "styles": [
+                            "node_modules/bootstrap/dist/css/bootstrap.min.css",
                             "src/@vex/styles/tailwind.scss",
                             "src/styles.scss"
                         ],
-                        "scripts": [],
+                        "scripts": [
+                        ],
                         "allowedCommonJsDependencies": [
                             "simplebar",
                             "highlight.js",
