--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
         "@visurel/iconify-angular": "~11.0.0",
         "angular-calendar": "~0.29.0-beta.10",
         "apexcharts": "~3.25.0",
+        "bootstrap": "^5.3.2",
         "date-fns": "~2.19.0",
         "express": "^4.18.2",
         "highlight.js": "~10.6.0",
