--- a/angular.json
+++ b/angular.json
@@ -40,6 +40,7 @@
                             "src/styles.scss"
                         ],
                         "scripts": [
+                            "node_modules/bootstrap/dist/js/bootstrap.min.js"
                         ],
                         "allowedCommonJsDependencies": [
                             "simplebar",
