--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
         "express": "^4.18.2",
         "highlight.js": "~10.6.0",
         "luxon": "~1.26.0",
+        "ngx-mask": "^13.2.1",
         "ngx-quicklink": "~0.2.7",
         "ngx-quill": "~16.0.1",
         "ngx-showdown": "~6.0.0",
