--- a/.github/workflows/1-feature-integration.yml
+++ b/.github/workflows/1-feature-integration.yml
@@ -3,6 +3,7 @@ on:
     push:
         branches:
             - feature/*
+            - bugfix/*
 jobs:
     sonar:
         runs-on: ubuntu-latest
